# reussir

./: CMakeLists.txt  LICENSE  README.md  cabal.project  flake.nix
.github/workflows/: mlir-cpp-test-windows.yml  mlir-cpp-test.yml
cmake/: TPDE.cmake
frontend/: CMakeLists.txt
frontend/reussir-bridge/: Setup.hs
frontend/reussir-codegen/: reussir-codegen.cabal
frontend/reussir-core/: reussir-core.cabal
frontend/reussir-core/app/: Compiler.hs  Main.hs
frontend/reussir-core/test/: Main.hs
frontend/reussir-core2/: reussir-core2.cabal
frontend/reussir-core2/app/: Elab.hs  SemiElab.hs
frontend/reussir-parser/: reussir-parser.cabal
frontend/reussir-parser/examples/: variant.rr
frontend/reussir-repl/: CHANGELOG.md  reussir-repl.cabal
frontend/reussir-repl/app/: Main.hs
include/Reussir/: RustCompiler.h
include/Reussir/Conversion/: InferVariantTag.h  (+3 more)
lib/: CMakeLists.txt
lib/Analysis/: AliasAnalysis.cpp
lib/Bridge/: Bridge.cppm  CMakeLists.txt  JITEngine.cppm
lib/Conversion/: CMakeLists.txt
lib/IR/: ReussirAttrs.cpp  ReussirDialect.cpp  ReussirInterfaces.cpp  ReussirOps.cpp  ReussirTypesScanner.cpp
lib/RustCompiler/: CMakeLists.txt  RustCompiler.cpp
runtime/: CMakeLists.txt  Cargo.toml
runtime/src/: lib.rs  nullable.rs  option.rs  rc.rs
runtime/utils/: rustc.rs
tests/integration/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/unittest/: CMakeLists.txt
tool/: CMakeLists.txt
tool/reussir-opt/: CMakeLists.txt  main.cpp
tool/reussir-translate/: CMakeLists.txt  main.cpp
www/: book.typ
www/templates/: ebook.typ  page.typ
(+249 files in other folders)
